Klassen kommentiert und code modernisiert